-> Fixed issue: Maven-Build schlägt fehl #1